// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectAssetElement can be configured to add options 1`] = `
<FormElement
  entry={
    Object {
      "value": Object {
        "name": "Favorite Color",
        "uuid": "9a93ede6-078f-44c9-ad0a-133793be5d56",
      },
    }
  }
  name="Flow"
>
  <SelectSearch
    __className=""
    assets={null}
    createPrompt="New: "
    initial={
      Array [
        Object {
          "name": "Favorite Color",
          "uuid": "9a93ede6-078f-44c9-ad0a-133793be5d56",
        },
      ]
    }
    isOptionUnique={[Function]}
    isValidNewOption={[Function]}
    multi={false}
    name="Flow"
    onChange={[Function]}
  />
</FormElement>
`;

exports[`SelectAssetElement handles updates 1`] = `Object {}`;

exports[`SelectAssetElement renders 1`] = `
<FormElement
  entry={
    Object {
      "value": Object {
        "name": "Favorite Color",
        "uuid": "9a93ede6-078f-44c9-ad0a-133793be5d56",
      },
    }
  }
  name="Flow"
>
  <SelectSearch
    __className=""
    assets={null}
    initial={
      Array [
        Object {
          "name": "Favorite Color",
          "uuid": "9a93ede6-078f-44c9-ad0a-133793be5d56",
        },
      ]
    }
    multi={false}
    name="Flow"
    onChange={[Function]}
  />
</FormElement>
`;
